Gracias enano hpt por dañar la lógica

--- a/src/app/modules/caja-chica/pages/listar-cajas/listar-cajas.html
+++ b/src/app/modules/caja-chica/pages/listar-cajas/listar-cajas.html
@@ -6,7 +6,7 @@
                 <h1 class="caja-title">Caja Chica</h1>
                 <div class="header-actions">
                     <button class="btn-primary" (click)="abrirCaja()">
-            + Abrir Caja
+            + Nuevo
           </button>
                 </div>
             </div>
