--- a/src/app/modules/factura/pages/listar-facturas/listar-facturas.html
+++ b/src/app/modules/factura/pages/listar-facturas/listar-facturas.html
@@ -6,7 +6,7 @@
             <div class="header-content">
                 <h3 class="facturas-title">Facturas</h3>
                 <button class="btn-primary" (click)="nuevaVenta()">
-          <span>+ Nueva Venta</span>
+          <span>+ Nuevo</span>
         </button>
             </div>
 
