--- a/src/app/modules/ingresos/pages/listar-ingresos/listar-ingresos.html
+++ b/src/app/modules/ingresos/pages/listar-ingresos/listar-ingresos.html
@@ -6,7 +6,7 @@
             <div class="header-content">
                 <h3 class="ingresos-title">Historial de Ingresos / Facturas</h3>
                 <button class="btn-primary" (click)="nuevoIngreso()">
-          <span>+ Nuevo Ingreso</span>
+          <span>+ Nuevo</span>
         </button>
             </div>
 
