--- a/src/app/modules/productos/pages/listar-productos/listar-productos.html
+++ b/src/app/modules/productos/pages/listar-productos/listar-productos.html
@@ -30,8 +30,8 @@
                     <button class="btn btn-outline-primary" (click)="importarProductos()" title="Importar productos desde Excel">
                         <i class="bi bi-file-earmark-arrow-up"></i><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-down-to-line-icon lucide-arrow-down-to-line"><path d="M12 17V3"/><path d="m6 11 6 6 6-6"/><path d="M19 21H5"/></svg>  Importar
                     </button>
-                    <button class="btn btn-success" (click)="nuevoIngreso()">
-                        <i class="bi bi-file-earmark-arrow-down"></i> + Nuevo Ingreso
+                    <button class="btn btn-primary" (click)="nuevoIngreso()">
+                        <i class="bi bi-file-earmark-arrow-down"></i> + Nuevo 
                     </button>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                             <td>{{ producto.proveedor || '-' }}</td>
                             <td>
                                 <div class="d-flex gap-2">
-                                    <button class="btn btn-sm btn-warning" (click)="editarObservacion(producto); $event.stopPropagation()" title="Editar observación">
+                                    <button class="btn btn-info" (click)="editarObservacion(producto); $event.stopPropagation()" title="Editar observación">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-pencil-icon lucide-pencil"><path d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"/><path d="m15 5 4 4"/></svg>
                                     </button>
                                     <!-- Toggle Activo/Desactivado -->
