--- a/src/app/modules/proveedores/pages/listar-proveedores/listar-proveedores.html
+++ b/src/app/modules/proveedores/pages/listar-proveedores/listar-proveedores.html
@@ -18,7 +18,7 @@
                     </button>
                 </div>
                 <button class="btn btn-primary" (click)="crearProveedor()">
-                    + Nuevo Proveedor
+                    + Nuevo
                 </button>
             </div>
             <div class="search-results" *ngIf="terminoBusqueda">
@@ -55,7 +55,7 @@
                             </td>
                             <td>
                                 <div class="d-flex gap-2">
-                                    <button class="btn btn-sm btn-primary" (click)="editarProveedor(proveedor, $event)" title="Editar Proveedor">
+                                    <button class="btn btn-info" (click)="editarProveedor(proveedor, $event)" title="Editar Proveedor">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-edit-icon lucide-edit">
                                             <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
                                         </svg>
