--- a/src/app/modules/caja-banco/pages/ver-caja/ver-caja.html
+++ b/src/app/modules/caja-banco/pages/ver-caja/ver-caja.html
@@ -5,7 +5,12 @@
                 <h1 class="caja-title">Detalles de Caja Banco</h1>
                 <div class="header-actions">
                     <button class="btn btn-secondary" (click)="volver()">← Volver</button>
-                    <button class="btn btn-action-move" (click)="registrarMovimiento()">+ Registrar Movimiento</button>
+                    <button 
+                        *ngIf="caja?.estado === 'ABIERTA'"
+                        class="btn btn-action-move" 
+                        (click)="registrarMovimiento()">
+                        + Registrar Movimiento
+                    </button>
                     <!-- Botón Cerrar Mes removido - cierre automático después de 1 mes -->
                     <button class="btn btn-primary " (click)="imprimirMensualActual()"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-printer-icon lucide-printer"><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><path d="M6 9V3a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6"/><rect x="6" y="14" width="12" height="8" rx="1"/></svg> Reemprimir</button>
                 </div>
